# SoftRasterizationRenderer

./: CMakeLists.txt  README.md  geometry.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
